English language implementation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,10 +4,44 @@
         "text2": "Since 2010, we have implemented a geomonitoring system that daily supervises and verifies compliance with social and environmental criteria by supplier slaughterhouses and direct or indirect farms, using satellite imagery to ensure responsible sourcing of raw materials.",
         "text3": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
         "text4": "Durli Leathers Full Traceability & Compliance",
-        "text5": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text6": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text7": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text8": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text9": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas."
+        "text5": "Discover the exact origin of each leather and follow its entire journey.",
+        "text6": "By consulting the Durli Leathers UniCode stamped on your leather, you will have access to all information related to traceability, socio-environmental compliance and origin of this specific leather.",
+        "text7": "Raw Material Responsible Sourcing",
+        "text8": "By following our Raw Material Responsible Sourcing Policy, we only purchase leather from areas in compliance with social and environmental standards.",
+        "text9": "We DO NOT purchase materials from suppliers involved in:",
+        "text10": "Understanding our Full Traceability Cycle",
+        "text11": "Our tracking system allows you to track back our leathers since the origin until the delivery of the final product to the customer and works in the following stages:",
+        "text12": "1. INDIVIDUAL RESPONSIBLE ORIGINATION",
+        "text13": "The bovines receive since the birth farms a unique identification through an earring and electronic bottom, and are certified through the protocol of the Individual Traceability and Monitoring of Indirects Program – PRIMI, created by NicePlanet and SBCert, guaranteeing farm`s information with the unique individual registration of each animal, monitoring of all movements of certified animals between farms, in addition to the socio-environmental compliance of the farms involved until the certified animals arrive at the slaughterhouse.",
+        "text14": "2. SOCIAL AND ENVIRONMENTAL COMPLIANCE",
+        "text15": "The supplying slaughterhouse also conducts social and environmental assessments of both direct and indirect certified farms, and only purchases animals from farms that comply with the defined criteria. Than deliver to Durli Leathers the fresh hides along with an identifying tag, which via computer system brings all the documents that attest to the socio-environmental compliant origin of the raw material (Farm) and the characteristics of each animal, all in a virtual environment that uses blockchain technology, ensuring the credibility and integrity of all information.",
+        "text16": "3. LEATHER-TO-LEATHER IDENTIFICATION",
+        "text17": "At Durli Leathers, each hide accompanied by its information (Individual tag) receives a unique alphanumeric code formed by 8 characters (The UniCode) laser-marked on the edges of the front part of the hides for identification until the end of the production process.",
+        "text18": "4. ORIGIN, PRODUCTION AND COMPOSITION DATA OF EACH PALLET",
+        "text19": "Smart readers scan the codes marked in each leather that forms the pallets, generating a QR Code for each of them, bringing together all the information on its composition, leather by leather, with data about the respective animals, origin of the farm, slaughterhouse, tannery processes, with traceability from the start to finish and socio-environmental compliance data.",
+        "text20": "5. END-TO-END TRANSPARENCY",
+        "text21": "The end customer has access to the UniCode of each leather and the Invoice number and can access all information.  This enables you to identify the origin of the leather you purchased and ensures transparency in all our processes.",
+        "text22": "With this process, we ensure that all Durli Leathers products ",
+        "text23": "are in compliance ",
+        "text24": "with our Raw Material Responsible Sourcing Policy, the requirements of LWG certification, and meet the growing demands of the most important markets.",
+        "text25": "All this care and responsibility for social and environmental issues in our operations, in addition to all the guarantees of responsible origination of raw materials, add value for our customers in the automotive, furniture, footwear and artifacts sectors. ",
+        "text26": "They will have the assurance of trading high-quality leathers",
+        "text27": "leathers produced with responsibility and socio-environmental compliance in markets such as Asia, Europe and the United States.",
+        "text28": "These are companies that will be able to ",
+        "text29": "proudly stamp on their brands the merit of being socio-environmentally correct.",
+        "text30": "Copyright ©2023 Durlicouros. All Rights Reserved.",
+        "icone1": "Deforestation",
+        "icone2": "Indigenous Land Invasion",
+        "icone3": "Protected Areas",
+        "icone4": "Embargoed Areas",
+        "icone5": "Forced or Child Labor",
+        "icone6": "Animal Welfare Violations",
+        "chart1": "Geo Monitoring ",
+        "chart2": "Indirect Farm",
+        "chart3": "Direct Farm",
+        "chart4": "Slaughterhouses ",
+        "chart5": "Tannery",
+        "chart6": "Traceability",
+        "chart7": "Customer"
     }
 }
