--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -4,10 +4,44 @@
         "text2": "Desde 2010, implantamos um sistema de geomonitoramento, que supervisiona e verifica diariamente com imagens de satélite o cumprimento de critérios socioambientais pelos frigoríficos fornecedores e fazendas diretas e indiretas, garantindo uma originação responsável de matéria-prima.",
         "text3": "Aliando o sistema de geomonitoramento à rastreabilidade individual de produto através de um código alfanumérico único marcado couro a couro, garantimos que o cliente final somente compre couros de áreas social e ambientalmente legais.",
         "text4": "Rastreabilidade e Conformidade Total Durlicouros",
-        "text5": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text6": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text7": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text8": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas.",
-        "text9": "Combining the geomonitoring system with individual product traceability through a unique alphanumeric code (UniCode) stamped leather by leather, we guarantee that the end customer only purchases leather from socially and environmentally legal areas."
+        "text5": "Descubra a origem exata de cada couro e siga toda a sua jornada.",
+        "text6": "Ao consultar o UniCode Durli estampado em seu couro, você terá acesso a todas as informações relacionadas à rastreabilidade, conformidade socioambiental e origem deste couro específico.",
+        "text7": "Originação Responsável de Matéria-Prima",
+        "text8": "Ao seguir a nossa Política de Compra Responsável de Matéria Prima, adquirimos couros somente de áreas em conformidade (compliance) socioambiental.",
+        "text9": "NÃO compramos matéria prima de fornecedores envolvidos em:",
+        "text10": "Entenda o Ciclo da Nossa Rastreabilidade Completa",
+        "text11": "Nosso sistema de rastreio permite acompanhar a matéria-prima desde a origem até a entrega do produto final ao cliente e funciona nas seguintes etapas:",
+        "text12": "1. ORIGINAÇÃO RESPONSÁVEL INDIVIDUAL",
+        "text13": "Os animais recebem, desde a fazenda de nascimento, uma identificação única através de brinco e bottom eletrônico e são certificados com o protocolo do Programa de Rastreabilidade Individual e Monitoramento de Indiretos – PRIMI, criado pela NicePlanet e SBCert, garantindo as informações das fazendas com o registro individual único de cada animal, monitoramento de todas as movimentações de animais certificados entre as fazendas, além da conformidade socioambiental das fazendas envolvidas até a chegada dos animais certificados ao frigorífico.",
+        "text14": "2. COMPLIANCE SOCIOAMBIENTAL",
+        "text15": "O frigorífico fornecedor também realiza as análises socioambientais das fazendas diretas e indiretas certificadas, e adquire animais somente de fazendas em compliance com os critérios definidos.  Entrega à Durlicouros o couro verde com uma etiqueta identificadora, que via sistema computacional traz todos os documentos que atestam a origem em conformidade socioambiental da matéria-prima (Fazenda) e as características de cada animal, tudo em ambiente virtual que utiliza a tecnologia blockchain, garantindo a credibilidade e integridade de todas as informações",
+        "text16": "3. IDENTIFICAÇÃO COURO A COURO",
+        "text17": "Na Durlicouros, cada couro acompanhado de suas informações recebe um código alfanumérico único formado por 8 caracteres marcados a laser nas bordas da parte dianteira do couro para identificação até o final do processo de produção. ",
+        "text18": "4. DADOS DE ORIGEM, PRODUÇÃO E COMPOSIÇÃO DE CADA PALLET",
+        "text19": "Leitores inteligentes leem os códigos marcados em cada couro que formam os pallets, gerando um QR Code para cada um deles, reunindo todas as informações de sua composição, couro a couro, com dados dos respectivos animais, origem da fazenda, frigorífico, processos no curtume, com rastreabilidade do início ao fim e dados de conformidade socioambiental.",
+        "text20": "5. TRANSPARÊNCIA DE PONTA A PONTA",
+        "text21": "O cliente final tem acesso ao UniCode de cada couro e ao número da Invoice e pode acessar todas as informações. Dessa forma consegue identificar a origem do couro que comprou e a transparência de todos os nossos processos.",
+        "text22": "Com esse processo, garantimos que todos os produtos Durlicouros estejam em conformidade com a ",
+        "text23": "nossa Política de Compra Responsável de Matéria Prima, às exigências da certificação LWG,",
+        "text24": " e atendendo às demandas crescentes dos mercados mais exigentes.",
+        "text25": "Todo este cuidado e responsabilidade com as questões sociais e ambientais em nossas operações, além de todas as garantias de uma originação responsável de matéria prima, ",
+        "text26": "agrega valor para nossos clientes dos setores automobilístico, de mobiliário, calçados e artefatos, ",
+        "text27": "que terão a garantia de comercializar couros de qualidade produzidos com responsabilidade e conformidade socioambiental em mercados como a Ásia, Europa e Estados Unidos.",
+        "text28": "São empresas que poderão",
+        "text29": " estampar em suas marcas o mérito de serem socioambientalmente corretas.",
+        "text30": "Copyright ©2023 Durlicouros. Todos os Direitos Reservados.",
+        "icone1": "Desmatamento",
+        "icone2": "Invasão de Terras Indígenas",
+        "icone3": "Áreas Protegidas",
+        "icone4": "Áreas Embargadas",
+        "icone5": "Trabalho Forçado ou Infantil",
+        "icone6": "Desrespeito ao Bem-Estar Animal",
+        "chart1": "Geo Monitoramento",
+        "chart2": "Fazenda Indireta",
+        "chart3": "Fazenda Direta",
+        "chart4": "Frigorífico",
+        "chart5": "Curtume",
+        "chart6": "Rastreabilidade",
+        "chart7": "Cliente"
     }
 }
