--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
         "text28": "These are companies that will be able to ",
         "text29": "proudly stamp on their brands the merit of being socio-environmentally correct.",
         "text30": "Copyright ©2023 Durlicouros. All Rights Reserved.",
+        "text31": "If you don't have a code available and want to explore how the tool works, feel free to try it out with the provided code below:",
         "icone1": "Deforestation",
         "icone2": "Indigenous Land Invasion",
         "icone3": "Protected Areas",
