--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -30,6 +30,7 @@
         "text28": "São empresas que poderão",
         "text29": " estampar em suas marcas o mérito de serem socioambientalmente corretas.",
         "text30": "Copyright ©2023 Durlicouros. Todos os Direitos Reservados.",
+        "text31": "Caso não possua um código disponível e deseje explorar o funcionamento da ferramenta, sinta-se à vontade para experimentá-la com o código fornecido abaixo:",
         "icone1": "Desmatamento",
         "icone2": "Invasão de Terras Indígenas",
         "icone3": "Áreas Protegidas",
